--- a/slovar_main/slovar/static/styles/styles.css
+++ b/slovar_main/slovar/static/styles/styles.css
@@ -1,5 +1,10 @@
 *{
     color: black;
+    font-family:'Raleway', sans-serif;;
+}
+
+body {
+    background-color:wheat;
 }
 
 .message-box {
@@ -28,4 +33,18 @@
 }
 .message-warning{
     background-color: yellow;
+}
+
+header {
+    background-color: wheat;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1{
+    margin-top: 30px;
+    font-size: 60px;
 }
