--- a/slovar_main/slovar/templates/slovar/base.html
+++ b/slovar_main/slovar/templates/slovar/base.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles/reset.css' %}">
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https: //fonts.googleapis.com/css2?family= Inter:wght@200;400 & family = Raleway:wght@500;600 & display=swap" rel="stylesheet">
     {% block head %}   
     
     
@@ -18,7 +21,9 @@
         </title>
 </head
 <body>
-    
+    <header>
+        <h1>Sinonim.ru</h1>
+    </header>
     {% if messages %}
         <div class="messages">
             {% for message in messages%}
