--- a/slovar_main/slovar/templates/slovar/base.html
+++ b/slovar_main/slovar/templates/slovar/base.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles/reset.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/styles.css' %}">
+    <link rel="preconnect"  href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https: //fonts.googleapis.com/css2?family= Inter:wght@200;400 & family = Raleway:wght@500;600 & display=swap" rel="stylesheet">
+<link href="https: //fonts.googleapis.com/css2?family= Inter:wght@200;400 & family = Raleway:wght@500;600,700 & display=swap" rel="stylesheet">
     {% block head %}   
     
     
@@ -33,10 +33,10 @@
             {% endfor %}
         </div>  
     {% endif %}
-
-    {% block body %}
-        
-    {% endblock body %}
+    <div class="body_block">
+        {% block body %}
+        {% endblock body %}
+    </div>
         
 </body>
 </html>
