--- a/slovar_main/slovar/templates/slovar/project.html
+++ b/slovar_main/slovar/templates/slovar/project.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'slovar/styles/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'slovar/styles/media.css' %}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -95,5 +98,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./main.js"></script>
+    <script src="{% static 'slovar/scripts/main.js' %}"></script>
   </body>
 </html>
