--- a/slovar_main/slovar/templates/slovar/project.html
+++ b/slovar_main/slovar/templates/slovar/project.html
@@ -30,15 +30,18 @@
             <div class="nav-right__search">
               <input type="text" placeholder="Введите слово..." />
               <img src="/img/search.svg" alt="" />
+              <img src="{% static 'slovar/img/search.svg' %}" alt="" />
             </div>
           </div>
           <div class="burger-menu">
             <img src="./img/burger.svg" alt="" />
+            <img src="{% static 'slovar/img/burger.svg' %}" alt="" />
           </div>
         </div>
         <div class="nav-search__adp">
           <input type="text" placeholder="Введите слово..." />
           <img src="/img/search.svg" alt="" />
+          <img src="{% static 'slovar/img/search.svg' %}" alt="" />
         </div>
         <div class="burger-menu__block">
           <div class="container">
