--- a/slovar_main/slovar/templates/slovar/index.html
+++ b/slovar_main/slovar/templates/slovar/index.html
@@ -36,13 +36,12 @@
         <div class="nav-search__adp">
           <input type="text" placeholder="Введите слово..." />
           <img src="/img/search.svg" alt="" />
-          <img src="{% static 'slovar/img/search.svg' %}" alt="" />
         </div>
         <div class="burger-menu__block">
           <div class="container">
             <div class="burger-menu__block-link">
-              <a href="#">Главная</a>
-              <a href="#">О проекте</a>
+              <a href="./index.html">Главная</a>
+              <a href="./project.html">О проекте</a>
             </div>
           </div>
         </div>
@@ -66,6 +65,10 @@
               class="analysis-conclusion__block__example analysis-conclusion__block-antonyms__example"
             >
               <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
             </ul>
           </div>
           <div class="analysis-conclusion__block-morphemicanalysis">
@@ -73,6 +76,15 @@
             <ul
               class="analysis-conclusion__block__example analysis-conclusion__block-morphemicanalysis__example"
             >
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте, Добрый день</li>
               <li>Здравствуйте, Добрый день</li>
             </ul>
           </div>
