--- a/slovar_main/slovar/static/slovar/styles/style.css
+++ b/slovar_main/slovar/static/slovar/styles/style.css
@@ -102,7 +102,7 @@ nav {
 
 main {
   padding: 60px 0;
-  height: 100%;
+  min-height: 100%;
 }
 
 .heading {
@@ -137,7 +137,7 @@ main {
 /* description */
 
 .analysis{
-  height: 100%;
+  min-height: calc(100vh - 160px);
 }
 
 .description {
