--- a/slovar_main/slovar/templates/slovar/project.html
+++ b/slovar_main/slovar/templates/slovar/project.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
-    <link rel="stylesheet" type="text/css" href="{% static 'slovar/styles/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'slovar/styles/media.css' %}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,24 +27,21 @@
             <div class="nav-right__search">
               <input type="text" placeholder="Введите слово..." />
               <img src="/img/search.svg" alt="" />
-              <img src="{% static 'slovar/img/search.svg' %}" alt="" />
             </div>
           </div>
           <div class="burger-menu">
             <img src="./img/burger.svg" alt="" />
-            <img src="{% static 'slovar/img/burger.svg' %}" alt="" />
           </div>
         </div>
         <div class="nav-search__adp">
           <input type="text" placeholder="Введите слово..." />
           <img src="/img/search.svg" alt="" />
-          <img src="{% static 'slovar/img/search.svg' %}" alt="" />
         </div>
         <div class="burger-menu__block">
           <div class="container">
             <div class="burger-menu__block-link">
-              <a href="#">Главная</a>
-              <a href="#">О проекте</a>
+              <a href="./index.html">Главная</a>
+              <a href="./project.html">О проекте</a>
             </div>
           </div>
         </div>
@@ -101,6 +95,5 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./main.js"></script>
-    <script src="{% static 'slovar/scripts/main.js' %}"></script>
   </body>
 </html>
