--- a/slovar_main/slovar/static/slovar/styles/style.css
+++ b/slovar_main/slovar/static/slovar/styles/style.css
@@ -159,7 +159,8 @@ main {
   display: flex;
   justify-content: space-between;
   overflow: scroll;
-  height: 500px;
+  height: auto;
+  margin-bottom: 70px;
 }
 
 ::-webkit-scrollbar {
