--- a/slovar_main/slovar/templates/slovar/index.html
+++ b/slovar_main/slovar/templates/slovar/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="{% static 'slovar/styles/media.css' %}" />
+    <link rel="stylesheet" href="{% static 'slovar/styles/style.css' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -56,7 +59,50 @@
             <ul
               class="analysis-conclusion__block__example analysis-conclusion__block-synonyms__example"
             >
-              <li>Здравствуйте, Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              <li>Добрый день</li>
+              <li>Здравствуйте</li>
+              <li>Добрый день</li>
+              
             </ul>
           </div>
           <div class="analysis-conclusion__block-antonyms">
@@ -89,5 +135,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./main.js"></script>
+    
   </body>
 </html>
