--- a/slovar_main/slovar/templates/slovar/project.html
+++ b/slovar_main/slovar/templates/slovar/project.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="{% static 'slovar/styles/media.css' %}" />
+    <link rel="stylesheet" href="{% static 'slovar/styles/style.css' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
