--- a/slovar_main/slovar/templates/slovar/index.html
+++ b/slovar_main/slovar/templates/slovar/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,16 +29,16 @@
             </div>
             <div class="nav-right__search">
               <input type="text" placeholder="Введите слово..." />
-              <img src="/img/search.svg" alt="" />
+              <img src="{% static 'slovar/img/search.svg' %}" alt="" />
             </div>
           </div>
           <div class="burger-menu">
-            <img src="./img/burger.svg" alt="" />
+            <img src="{% static 'slovar/img/burger.svg' %}" alt="" />
           </div>
         </div>
         <div class="nav-search__adp">
           <input type="text" placeholder="Введите слово..." />
-          <img src="/img/search.svg" alt="" />
+          <img src="{% static 'slovar/img/search.svg' %}" alt="" />
         </div>
         <div class="burger-menu__block">
           <div class="container">
@@ -52,56 +52,13 @@
     </header>
     <main>
       <section class="analysis container">
-        <h1 class="analysis-conclusion">Разбор слова «Привет»</h1>
+        <h1 class="analysis-conclusion">Разбор слова ...</h1>
         <div class="analysis-conclusion__block">
           <div class="analysis-conclusion__block-synonyms">
             <p>Синонимы</p>
             <ul
               class="analysis-conclusion__block__example analysis-conclusion__block-synonyms__example"
             >
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
-              <li>Добрый день</li>
-              <li>Здравствуйте</li>
-              <li>Добрый день</li>
               
             </ul>
           </div>
@@ -110,7 +67,6 @@
             <ul
               class="analysis-conclusion__block__example analysis-conclusion__block-antonyms__example"
             >
-              <li>Здравствуйте, Добрый день</li>
             </ul>
           </div>
           <div class="analysis-conclusion__block-morphemicanalysis">
@@ -118,7 +74,6 @@
             <ul
               class="analysis-conclusion__block__example analysis-conclusion__block-morphemicanalysis__example"
             >
-              <li>Здравствуйте, Добрый день</li>
             </ul>
           </div>
         </div>
@@ -134,7 +89,7 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./main.js"></script>
-    
+    <!-- <script src="./main.js"></script> -->
+    <script src="{% static 'slovar/scripts/main.js' %}" type="text/javascript"></script>
   </body>
 </html>
